# gd-examples

./: CMakeLists.txt
src/engine/: CMakeLists.txt  box_collision_component.cpp  controller.h  engine.cpp  engine.h  event.h  input_component.cpp  movement_component.cpp  player_controller.h  renderer.cpp  scene_component.cpp  scene_component.h  sprite_component.h  world.cpp
src/game/: CMakeLists.txt  actor.cpp  actor.h  actor_component.cpp  actor_component.h  box_collision_component.h  controller.cpp  game.cpp  game.h  input_component.h  main.cpp  movement_component.cpp  movement_component.h  player_controller.cpp  quad.cpp  quad.h  quad_controller.cpp  quad_controller.h  quad_pawn.cpp  quad_pawn.h  renderer.h  sdl_input_handler.cpp  sdl_input_handler.h  sprite_component.cpp  world.cpp  world.h
